# quickproto

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  vcpkg.json
src/: base.hpp  builder.hpp  dce.hpp  env.hpp  nodes.hpp  parser.hpp  scanner.hpp  token.hpp  type.hpp  value.hpp
src/backends/: backend.hpp  dot.hpp
src/builder/: all.hpp  binary_math.hpp  bit_logic.hpp  compare.hpp  control_flow.hpp  logic.hpp  unary.hpp  value.hpp
src/nodegen/: add.hpp  addr.hpp  all.hpp  alloca.hpp  and_xor.hpp  basic.hpp  bit_and.hpp  bit_or.hpp  bit_xor.hpp  call.hpp  call_static.hpp  cast.hpp  compl.hpp  composite.hpp  deref.hpp  div.hpp  eq.hpp  exit.hpp  ge.hpp  gt.hpp  le.hpp  load.hpp  logic_and.hpp  logic_or.hpp  loop.hpp  lt.hpp  mul.hpp  ne.hpp  neg.hpp  not.hpp  phi.hpp  region.hpp  return.hpp  return_phi.hpp  shift_left.hpp  shift_right.hpp  store.hpp  sub.hpp  value.hpp
src/opt/: all.hpp  dce.hpp  mem_reorder.hpp
src/parser/: all.hpp  base.hpp  decl.hpp  expr.hpp  stmt.hpp  type.hpp
src/pass/: cmp_passes.hpp  const_fold.hpp  pass.hpp  pass_registry.hpp  phi_fold.hpp
src/types/: all.hpp  array.hpp  bool.hpp  composite.hpp  const.hpp  covariant_helper.hpp  float.hpp  flow.hpp  func.hpp  int.hpp  ptr.hpp  rune.hpp  string.hpp  struct.hpp  top.hpp  tuple.hpp  type.hpp  value.hpp  void.hpp
src/types/int/: int_lit.hpp  int_lit_old.hpp  sized_int.hpp
src/types_v2/: type.hpp
src/utils/: function_ref.hpp  overload.hpp  smallvec.hpp  stacklist.hpp  uchars.hpp
utils/: bitset256.hpp
